--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,7 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+
+.cards {
+  display: flex;
+  padding: 16px;
+  gap: 52px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+.plant {
+  text-align: center;
+  width: 200px;
+  border: solid ;
+}
+
 
 /* do not edit this footer */
 .footer {
