--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,26 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 1rem;
+}
+
+.top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: solid;
+}
+
+.bottom{
+padding: 0 3.6rem;
+}
+
+.header-container{
+  border: solid;
+  text-align: left;
+  flex: auto;
+  padding: 0.75rem;
+  font-weight: bold;
 }
 
 .icon {
